@@ -152,6 +152,7 @@ BEGIN
   IDS_U3PURCHASE          "Purchase unlimited &U3 version..."
   IDS_EXPIRES_ON          "Password expires on:"
   IDS_EXPIRES_IN          "Password expires in:"
+  IDS_OVERRIDE_POLICY     "Shift+click to view current policy"
 END
 
 STRINGTABLE
