@@ -397,4 +397,5 @@
 #define IDS_IN_N_DAYS                   5581
 #define IDS_EXPIRES_ON                  5582
 #define IDS_EXPIRES_IN                  5583
+#define IDS_OVERRIDE_POLICY             5584
 
